--- a/ecommerce/requirements.txt
+++ b/ecommerce/requirements.txt
@@ -1,7 +1,11 @@
+dj-database-url==1.0.0
 Django==2.2
+django-heroku==0.3.1
 django-mathfilters==1.0.0
 gunicorn==20.1.0
 Pillow==7.2.0
 pkg-resources==0.0.0
+psycopg2==2.7.5
 pytz==2022.6
 sqlparse==0.4.3
+whitenoise==6.2.0
